# lorem-markdownum

./: .gitignore  Dockerfile  LICENSE  README.markdown  flake.nix  lorem-markdownum.cabal  stack.yaml
data/code/: 2025.txt  techspeak.txt
data/metamorphoses/: ovid.met1.shtml.txt  ovid.met10.shtml.txt  ovid.met11.shtml.txt  ovid.met12.shtml.txt  ovid.met13.shtml.txt  ovid.met14.shtml.txt  ovid.met15.shtml.txt  ovid.met2.shtml.txt  ovid.met3.shtml.txt  ovid.met4.shtml.txt  ovid.met5.shtml.txt  ovid.met6.shtml.txt  ovid.met7.shtml.txt  ovid.met8.shtml.txt  ovid.met9.shtml.txt
data/techspeak/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
lib/LoremMarkdownum/: App.hs  FrequencyTree.hs  Gen.hs  Markov.hs  Options.hs  Print.hs  Token.hs  Trie.hs
lib/LoremMarkdownum/Token/: Parse.hs
src/LoremMarkdownum/: CLI.hs  FrequencyTree.hs  Print.hs  Token.hs  Web.hs
src/LoremMarkdownum/Text/: Util.hs
src/LoremMarkdownum/Web/: Views.hs
static/: lorem-markdownum.css  lorem-markdownum.js
