Name:          lorem-markdownum
Version:       0.1.0.0
Synopsis:      A lorem lipsum generator for markdown
Homepage:      http://jaspervdj.be/lorem-markdownum
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2013 (c) Jasper Van der Jeugt
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    LoremMarkdownum.FrequencyTree
    LoremMarkdownum.Gen
    LoremMarkdownum.Gen.Code
    LoremMarkdownum.Gen.Markdown
    LoremMarkdownum.Markov
    LoremMarkdownum.Print
    LoremMarkdownum.Text.Util
    LoremMarkdownum.Token
    LoremMarkdownum.Token.Parse
    LoremMarkdownum.Trie

  Build-depends:
    base        >= 4    && < 5,
    bytestring  >= 0.9  && < 0.11,
    containers  >= 0.5  && < 0.6,
    directory   >= 1.1  && < 1.3,
    filepath    >= 1.3  && < 1.4,
    mtl         >= 2.1  && < 2.2,
    random      >= 1.0  && < 1.1,
    text        >= 0.11 && < 1.12
