Name:          lorem-markdownum
Version:       0.3.0.1
Synopsis:      A lorem ipsum generator for markdown
Homepage:      http://jaspervdj.be/lorem-markdownum
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2013 (c) Jasper Van der Jeugt
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: lib
  Ghc-options:    -Wall

  Exposed-modules:
    LoremMarkdownum.FrequencyTree
    LoremMarkdownum.Gen
    LoremMarkdownum.Gen.Code
    LoremMarkdownum.Gen.Markdown
    LoremMarkdownum.Markov
    LoremMarkdownum.Print
    LoremMarkdownum.Text.Util
    LoremMarkdownum.Token
    LoremMarkdownum.Token.Parse
    LoremMarkdownum.Trie

  Build-depends:
    base        >= 4    && < 5,
    blaze-html  >= 0.6  && < 0.9,
    bytestring  >= 0.9  && < 0.11,
    containers  >= 0.5  && < 0.6,
    directory   >= 1.1  && < 1.3,
    filepath    >= 1.3  && < 1.5,
    mtl         >= 2.1  && < 2.3,
    random      >= 1.0  && < 1.2,
    text        >= 0.11 && < 1.3

Executable lorem-markdownum-web
  Hs-source-dirs: src
  Main-is:        LoremMarkdownum/Web.hs
  Ghc-options:    -Wall -O2 -threaded

  Other-modules:
    LoremMarkdownum.Web.Views

  Build-depends:
    lorem-markdownum,
    base             >= 4    && < 5,
    blaze-html       >= 0.6  && < 0.9,
    bytestring       >= 0.9  && < 0.11,
    mtl              >= 2.1  && < 2.3,
    random           >= 1.0  && < 1.2,
    snap-blaze       >= 0.2  && < 0.3,
    snap-core        >= 0.9  && < 1.1,
    snap-server      >= 0.9  && < 1.1,
    text             >= 0.11 && < 1.3
